--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactAppStart",
+  "name": "jelte-boelens-react-app-template",
   "version": "1.0.0",
   "description": "Selfmade react webpack app.",
   "main": "index.js",
@@ -17,14 +17,8 @@
     "@babel/preset-react": "^7.12.10",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
-    "babel-loader": "^8.2.2",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
     "eslint": "^7.17.0",
-    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-google": "^0.14.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
